tests/integration/snapshots/integration__completion__latex__include_relative_root_directory.snap
---
source: tests/integration/completion.rs
expression: "complete_and_resolve(&server, uri, 0, 7)?"

---
{
  "isIncomplete": false,
  "items": [
    {
      "label": "src",
      "kind": 1,
      "preselect": false,
      "sortText": "00",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 7
          },
          "end": {
            "line": 0,
            "character": 7
          }
        },
        "newText": "src"
      }
    }
  ]
}
