tests/integration/snapshots/integration__completion__latex__include_relative_root_no_extension.snap
---
source: tests/integration/completion.rs
expression: "complete_and_resolve(&server, uri, 1, 9)?"

---
{
  "isIncomplete": false,
  "items": [
    {
      "label": "bar",
      "kind": 1,
      "preselect": false,
      "sortText": "00",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 9
          },
          "end": {
            "line": 1,
            "character": 9
          }
        },
        "newText": "bar"
      }
    },
    {
      "label": "main",
      "kind": 1,
      "preselect": false,
      "sortText": "01",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 9
          },
          "end": {
            "line": 1,
            "character": 9
          }
        },
        "newText": "main"
      }
    },
    {
      "label": "qux",
      "kind": 1,
      "preselect": false,
      "sortText": "02",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 9
          },
          "end": {
            "line": 1,
            "character": 9
          }
        },
        "newText": "qux"
      }
    }
  ]
}
