tests/integration/snapshots/integration__completion__latex__include_relative_root_with_extension.snap
---
source: tests/integration/completion.rs
expression: "complete_and_resolve(&server, uri, 2, 7)?"

---
{
  "isIncomplete": false,
  "items": [
    {
      "label": "bar.tex",
      "kind": 1,
      "preselect": false,
      "sortText": "00",
      "textEdit": {
        "range": {
          "start": {
            "line": 2,
            "character": 7
          },
          "end": {
            "line": 2,
            "character": 7
          }
        },
        "newText": "bar.tex"
      }
    },
    {
      "label": "main.tex",
      "kind": 1,
      "preselect": false,
      "sortText": "01",
      "textEdit": {
        "range": {
          "start": {
            "line": 2,
            "character": 7
          },
          "end": {
            "line": 2,
            "character": 7
          }
        },
        "newText": "main.tex"
      }
    },
    {
      "label": "qux",
      "kind": 1,
      "preselect": false,
      "sortText": "02",
      "textEdit": {
        "range": {
          "start": {
            "line": 2,
            "character": 7
          },
          "end": {
            "line": 2,
            "character": 7
          }
        },
        "newText": "qux"
      }
    }
  ]
}
