tests/integration/snapshots/integration__completion__latex__include_relative_sub_directory.snap
---
source: tests/integration/completion.rs
expression: "complete_and_resolve(&server, uri, 3, 11)?"

---
{
  "isIncomplete": false,
  "items": [
    {
      "label": "baz.tex",
      "kind": 1,
      "preselect": false,
      "sortText": "00",
      "textEdit": {
        "range": {
          "start": {
            "line": 3,
            "character": 11
          },
          "end": {
            "line": 3,
            "character": 11
          }
        },
        "newText": "baz.tex"
      }
    }
  ]
}
