tests/integration/snapshots/integration__completion__latex__kernel_command_environment.snap
---
source: tests/integration/completion.rs
expression: "complete_and_resolve(&server, uri, 6, 10)?"

---
{
  "isIncomplete": false,
  "items": [
    {
      "label": "document",
      "kind": 1,
      "detail": "built-in",
      "preselect": false,
      "sortText": "00",
      "textEdit": {
        "range": {
          "start": {
            "line": 6,
            "character": 7
          },
          "end": {
            "line": 6,
            "character": 10
          }
        },
        "newText": "document"
      }
    }
  ]
}
