tests/integration/snapshots/integration__completion__latex__package_environment.snap
---
source: tests/integration/completion.rs
expression: "complete_and_resolve(&server, uri, 5, 5)?"

---
{
  "isIncomplete": false,
  "items": [
    {
      "label": "alignedat",
      "kind": 1,
      "detail": "amsmath.sty",
      "preselect": false,
      "sortText": "00",
      "textEdit": {
        "range": {
          "start": {
            "line": 5,
            "character": 5
          },
          "end": {
            "line": 5,
            "character": 9
          }
        },
        "newText": "alignedat"
      }
    },
    {
      "label": "aligned",
      "kind": 1,
      "detail": "amsmath.sty",
      "preselect": false,
      "sortText": "01",
      "textEdit": {
        "range": {
          "start": {
            "line": 5,
            "character": 5
          },
          "end": {
            "line": 5,
            "character": 9
          }
        },
        "newText": "aligned"
      }
    },
    {
      "label": "alignat",
      "kind": 1,
      "detail": "amsmath.sty",
      "preselect": false,
      "sortText": "02",
      "textEdit": {
        "range": {
          "start": {
            "line": 5,
            "character": 5
          },
          "end": {
            "line": 5,
            "character": 9
          }
        },
        "newText": "alignat"
      }
    },
    {
      "label": "align",
      "kind": 1,
      "detail": "amsmath.sty",
      "preselect": false,
      "sortText": "03",
      "textEdit": {
        "range": {
          "start": {
            "line": 5,
            "character": 5
          },
          "end": {
            "line": 5,
            "character": 9
          }
        },
        "newText": "align"
      }
    },
    {
      "label": "align*",
      "kind": 1,
      "detail": "amsmath.sty",
      "preselect": false,
      "sortText": "04",
      "textEdit": {
        "range": {
          "start": {
            "line": 5,
            "character": 5
          },
          "end": {
            "line": 5,
            "character": 9
          }
        },
        "newText": "align*"
      }
    },
    {
      "label": "alignat*",
      "kind": 1,
      "detail": "amsmath.sty",
      "preselect": false,
      "sortText": "05",
      "textEdit": {
        "range": {
          "start": {
            "line": 5,
            "character": 5
          },
          "end": {
            "line": 5,
            "character": 9
          }
        },
        "newText": "alignat*"
      }
    },
    {
      "label": "flalign",
      "kind": 1,
      "detail": "amsmath.sty",
      "preselect": false,
      "sortText": "06",
      "textEdit": {
        "range": {
          "start": {
            "line": 5,
            "character": 5
          },
          "end": {
            "line": 5,
            "character": 9
          }
        },
        "newText": "flalign"
      }
    }
  ]
}
