tests/integration/snapshots/integration__completion__latex__pgf_library.snap
---
source: tests/integration/completion.rs
expression: "complete_and_resolve(&server, uri, 1, 15)?"

---
{
  "isIncomplete": true,
  "items": [
    {
      "label": "arrows",
      "kind": 1,
      "preselect": false,
      "sortText": "00",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 15
          },
          "end": {
            "line": 1,
            "character": 15
          }
        },
        "newText": "arrows"
      }
    },
    {
      "label": "arrows.meta",
      "kind": 1,
      "preselect": false,
      "sortText": "01",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 15
          },
          "end": {
            "line": 1,
            "character": 15
          }
        },
        "newText": "arrows.meta"
      }
    },
    {
      "label": "arrows.spaced",
      "kind": 1,
      "preselect": false,
      "sortText": "02",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 15
          },
          "end": {
            "line": 1,
            "character": 15
          }
        },
        "newText": "arrows.spaced"
      }
    },
    {
      "label": "curvilinear",
      "kind": 1,
      "preselect": false,
      "sortText": "03",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 15
          },
          "end": {
            "line": 1,
            "character": 15
          }
        },
        "newText": "curvilinear"
      }
    },
    {
      "label": "datavisualization.barcharts",
      "kind": 1,
      "preselect": false,
      "sortText": "04",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 15
          },
          "end": {
            "line": 1,
            "character": 15
          }
        },
        "newText": "datavisualization.barcharts"
      }
    },
    {
      "label": "datavisualization.formats.functions",
      "kind": 1,
      "preselect": false,
      "sortText": "05",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 15
          },
          "end": {
            "line": 1,
            "character": 15
          }
        },
        "newText": "datavisualization.formats.functions"
      }
    },
    {
      "label": "datavisualization.polar",
      "kind": 1,
      "preselect": false,
      "sortText": "06",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 15
          },
          "end": {
            "line": 1,
            "character": 15
          }
        },
        "newText": "datavisualization.polar"
      }
    }
  ]
}
